Bug 98594 - interface claim failed error could be more explicit
Summary: interface claim failed error could be more explicit
Status: RESOLVED FIXED
Alias: None
Product: libfprint
Classification: Unclassified
Component: libfprint (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: libfprint-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-04 21:16 UTC by David Lechner
Modified: 2016-11-04 23:17 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch (951 bytes, patch)
2016-11-04 21:16 UTC, David Lechner
Details | Splinter Review

Description David Lechner 2016-11-04 21:16:44 UTC
Created attachment 127766 [details] [review]
patch

I was troubleshooting a problem where I was getting "interface claim failed". I solved the problem, but it would have been much easier if this error message said why the claim failed. (In my case, there was a 3rd party kernel module installed.)
Comment 1 Bastien Nocera 2016-11-04 23:17:35 UTC
Thanks for the patch, but in the future bear in mind that all similar errors
need to be fixed in the other drivers.

(And I messed up the bug references in the log...)

commit 76269decdd405a0ae919a24c1ba3061c44bf80b2
Author: Bastien Nocera <hadess@hadess.net>
Date:   Sat Nov 5 00:12:46 2016 +0100

    aes4000: Fix possible crash if USB init fails
    
    The code was indented, but only the first call was actually in the
    conditional, which meant that initialisation carried on as normal on top
    of a failed USB device. Exit early and remove the conditional to fix
    this.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=98594

commit 8454a25ecfc27c5d96867a9fda012d0a73ffeddb
Author: Bastien Nocera <hadess@hadess.net>
Date:   Sat Nov 5 00:11:30 2016 +0100

    aes3500: Fix possible crash if USB init fails
    
    The code was indented, but only the first call was actually in the
    conditional, which meant that initialisation carried on as normal on top
    of a failed USB device. Exit early and remove the conditional to fix
    this.

commit a0bbbd7d32150ab6ed25f466cce05169fbbbaead
Author: Bastien Nocera <hadess@hadess.net>
Date:   Sat Nov 5 00:10:17 2016 +0100

    drivers: Print USB error when libusb_claim_interface() fails
    
    https://bugs.freedesktop.org/show_bug.cgi?id=98594


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.