drivers: Print USB error when libusb_claim_interface() fails

https://bugs.freedesktop.org/show_bug.cgi?id=98594